tests/invalid/ee_invalid.err_exp
ee_invalid.m:039: Error: `:- pragma foreign_export_enum' declarations [38;5;203mare not[39;49m
ee_invalid.m:039:   [38;5;203mallowed[39;49m for builtin types such as [38;5;87m`int'/0.[39;49m
ee_invalid.m:043: In `:- pragma foreign_export_enum' declaration:
ee_invalid.m:043:   error: the type [38;5;87m`undefined_type'/0[39;49m is [38;5;203mundefined.[39;49m
ee_invalid.m:047: Error: the Mercury definition of [38;5;87m`ee_invalid.foo'/1[39;49m is not an
ee_invalid.m:047:   enumeration type, so [38;5;203mthere must not be any[39;49m
ee_invalid.m:047:   [38;5;203m`:- pragma foreign_export_enum' declarations for it.[39;49m
ee_invalid.m:010:   That Mercury definition is here.
ee_invalid.m:010:   It has this non-zero arity constructor:
ee_invalid.m:010:     [38;5;203m`foo'/1.[39;49m
ee_invalid.m:051: Error: the Mercury definition of [38;5;87m`ee_invalid.bar'/0[39;49m is an
ee_invalid.m:051:   equivalence type, not an enumeration type, so [38;5;203mthere must[39;49m
ee_invalid.m:051:   [38;5;203mnot be any `:- pragma foreign_export_enum' declarations for[39;49m
ee_invalid.m:051:   [38;5;203mit.[39;49m
ee_invalid.m:013:   That Mercury definition is here.
ee_invalid.m:058: Error: the Mercury definition of [38;5;87m`ee_invalid.baz'/0[39;49m is a
ee_invalid.m:058:   foreign type, not an enumeration type, so [38;5;203mthere must not be[39;49m
ee_invalid.m:058:   [38;5;203many `:- pragma foreign_export_enum' declarations for it.[39;49m
ee_invalid.m:020:   That Mercury definition is here.
ee_invalid.m:063: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:063:   `ee_invalid.alphabet'/0:
ee_invalid.m:063:   error: the following symbol is [38;5;203mnot a constructor[39;49m of the
ee_invalid.m:063:   type:
ee_invalid.m:063:     [38;5;203m`deg'.[39;49m
ee_invalid.m:068: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:068:   `ee_invalid.alphabet'/0:
ee_invalid.m:068:   error: the following symbol has a module qualification that
ee_invalid.m:068:   is [38;5;203mnot compatible with the type definition:[39;49m
ee_invalid.m:068:     [38;5;203m`foo.def'.[39;49m
ee_invalid.m:073: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:073:   `ee_invalid.alphabet'/0:
ee_invalid.m:073:   error: the following symbol is [38;5;203mnot a constructor[39;49m of the
ee_invalid.m:073:   type:
ee_invalid.m:073:     [38;5;203m`deg'.[39;49m
ee_invalid.m:073: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:073:   `ee_invalid.alphabet'/0:
ee_invalid.m:073:   error: the specified [38;5;87mmapping between the names of Mercury[39;49m
ee_invalid.m:073:   [38;5;87mconstructors and the corresponding foreign names[39;49m is
ee_invalid.m:073:   [38;5;203minconsistent.[39;49m
ee_invalid.m:073:   The following foreign name is [38;5;203mrepeated:[39;49m
ee_invalid.m:073:     [38;5;203m`ABC'.[39;49m
ee_invalid.m:077: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:077:   `ee_invalid.alphabet'/0:
ee_invalid.m:077:   error: the specified [38;5;87mmapping between the names of Mercury[39;49m
ee_invalid.m:077:   [38;5;87mconstructors and the corresponding foreign names[39;49m is
ee_invalid.m:077:   [38;5;203minconsistent.[39;49m
ee_invalid.m:077:   The following Mercury constructor name is [38;5;203mrepeated:[39;49m
ee_invalid.m:077:     [38;5;203m`abc'.[39;49m
ee_invalid.m:083: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:083:   `ee_invalid.strange_names'/0:
ee_invalid.m:083:   error: some of the constructors of the type [38;5;203mcannot be[39;49m
ee_invalid.m:083:   [38;5;203mconverted[39;49m into valid identifiers.
ee_invalid.m:083:   The problematic foreign names are:
ee_invalid.m:083:     [38;5;203m`!@THIS',[39;49m
ee_invalid.m:083:     [38;5;203m`#$WON'T',[39;49m
ee_invalid.m:083:     [38;5;203m`%^WORK'.[39;49m
